# rules_go_repro

./: WORKSPACE
go/server/: BUILD.bazel
protos/: BUILD.bazel  repro.proto
