load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library")

go_grpc_library(
    name = "repro_library",
    importpath = "github.com/1mentat/rules_go_repro/protos",
    proto = "//protos:repro_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ],
)
